install(FILES
    aim.desktop
    facebook.desktop
    gg.desktop
    googletalk.desktop
    groupwise.desktop
    icq.desktop
    irc.desktop
    meanwhile.desktop
    msn.desktop
    qq.desktop
    sip.desktop
    skype.desktop
    sms.desktop
    twitter.desktop
    xmpp.desktop
    ymsgr.desktop
    DESTINATION ${KDE_INSTALL_DATADIR_KF5}/kcontacts/improtocols
)
